<resources>
    <string name="app_name">Plan It</string>
    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>

    <string name="extra_from_login">FROM_LOGIN</string>
    <string name="extra_from_signup">FROM_SIGNUP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="event_organized_title">Event you organized</string>
    <string name="event_take_part_title">Event you take part in</string>
    <string name="nav_groups_title">Groups</string>
    <string name="nav_info_title">Info</string>
    <string name="nav_logout_title">Log Out</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="email_user_list_pref">email_user_list</string>
    <string name="name_pref">name</string>
    <string name="surname_pref">surname</string>
    <string name="email_pref">email</string>
    <string name="username_pref">username</string>
    <string name="password_pref">pasword</string>
    <string name="born_date_pref">date</string>

    <!-- Strings related to Login -->
    <string name="login_prompt_email">Email or Username</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_text_button">Log In</string>
    <string name="signup_text_button">Sign Up</string>
    <string name="error_invalid_email">This email address or username is not registered</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to Signup -->
    <string name="signup_prompt_name">Name</string>
    <string name="signup_prompt_surname">Surname</string>
    <string name="signup_prompt_email">Email</string>
    <string name="signup_prompt_username">Username</string>
    <string name="signup_prompt_password">Password</string>
    <string name="signup_prompt_born_date">Born Date</string>
    <string name="error_already_present_email">This email is already present</string>
    <string name="error_already_existing_username">This username already exists</string>
    <string name="signup_account_title">Sign Up Account</string>


    <!-- Strings related to PlanEvent -->
    <string name="create_event_title">Create an Event</string>
    <string name="place_settings_text">Place</string>
    <string name="place_name_edit">Place Name</string>
    <string name="event_name_edit">Event Name</string>
    <string name="event_name_text">Name</string>
    <string name="radio_choose_place_after">Choose place after</string>
    <string name="radio_choose_place_now">Choose place now</string>
    <string name="data_settings_text">Date</string>
    <string name="radio_choose_date_now">Choose date now</string>
    <string name="radio_choose_date_after">Choose date after</string>
    <string name="time_settings_text">Time</string>
    <string name="radio_choose_time_now">Choose time now</string>
    <string name="radio_choose_time_after">Choose time after</string>
    <string name="time_minutes_separator">:</string>
    <string name="date_edit">Date</string>
    <string name="create_button_text">Create</string>

    <string name="data_range_settings_text">Date Range</string>
    <string name="start_date_edit">Start Date</string>
    <string name="end_date_edit">End Date</string>
    <string name="time_range_settings_text">Time Range</string>
    <string name="start_time_text">Start Time</string>
    <string name="end_time_text">End Time</string>
    <string name="id_pref">id</string>
    <string name="no_event_text">No event to be shown</string>
    <string name="place_province_edit">Province</string>
    <string name="place_city_edit">City</string>
    <string name="place_address_edit">Address (optional)</string>
    <string name="signup_prompt_confirm_password">Confirm Password</string>
    <string name="error_password_not_matching">Password not matching</string>
    <string name="no_connection_text">Connection is not available</string>
    <string name="name_info">Name:</string>
    <string name="surname_info">Surname:</string>
    <string name="email_info">Email:</string>
    <string name="usernameInfo">Username:</string>


    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="extra_from_organized">extra_from_organized</string>
    <string name="extra_from_info">extra_from_info</string>

    <string name="empty_field_message">To be defined</string>
    <string name="your_groups_nav">Your Groups</string>
    <string name="born_date_info">Born date:</string>
    <string name="your_invites_nav">Your Invites</string>
    <string name="apply_button">Apply</string>
    <string name="group_name_text">Group Name</string>
    <string name="create_a_new_group_text">Create a new Group</string>
    <string name="name_of_the_group_to_create_text">Name of the group to create:</string>
    <string name="create_group_button">Create Group</string>
    <string name="username_or_email_of_the_person_to_invite_edit">Username or Email of the person to invite:</string>
    <string name="invite_button">Invite</string>
    <string name="make_a_proposal_text">Make a Proposal</string>
    <string name="don_t_propose_place_radio">Don\'t propose place</string>
    <string name="propose_place_redio">Propose place</string>
    <string name="don_t_propose_date_radio">Don\'t propose date</string>
    <string name="propose_date_radio">Propose date</string>
    <string name="don_t_propose_time_radio">Don\'t propose time</string>
    <string name="propose_time_radio">Propose time</string>
    <string name="send_proposal_button">Send Proposal</string>
    <string name="place_name_info_text">Place Name</string>
    <string name="place_province_info_text">Place Province</string>
    <string name="place_city_info_text">Place City</string>
    <string name="place_address_infor_text">Place Address</string>
    <string name="event_organizer_info_text">Info</string>
    <string name="event_organizer_place_name_text">Place Name</string>
    <string name="event_organizer_place_province_text">Place Province</string>
    <string name="event_organizer_place_city_text">Place City</string>
    <string name="event_organizer_place_address_text">Place Address</string>
    <string name="guests_text">Guests</string>
    <string name="proposals_text">Proposals</string>
    <string name="places_proposals_text">Places</string>
    <string name="dates_proposal_text">Dates</string>
    <string name="times_proposal_text">Times</string>
    <string name="invite_a_person_or_a_group_text">Invite a Person or a Group</string>
    <string name="invite_event_user_radio">User</string>
    <string name="invite_event_group_radio">Group</string>
    <string name="username_or_email_of_the_guest_text">Username or Email of the guest:</string>
    <string name="invite_to_event_invite_button">Invite</string>
    <string name="list_dates_item_text">Dates</string>
    <string name="list_place_item_name">Name:</string>
    <string name="list_place_item_province">Province:</string>
    <string name="list_place_item_city">City:</string>
    <string name="list_place_item_address">Address:</string>
    <string name="list_time_item_time">Time</string>
    <string name="nav_header_home_text">Plan It</string>
    <string name="nav_header_home_subtitle">The event planner you always wondered</string>

    <string name="nav_your_invites">Your invites</string>
    <string name="custom_dialog_c_problem">Connection problem,please retry</string>
    <string name="user_not_e">This username doesn\'t exist</string>
    <string name="email_not_e">This email doesn\'t exist</string>
    <string name="del_ev">Delete Event</string>
    <string name="sur_ev">Are you sure you want to delete event?</string>
    <string name="invite_sended">Invite sended</string>
    <string name="pro_sended">Proposal sended</string>
    <string name="ok_check">Ok, i will check</string>
    <string name="conn_err">Connection error</string>
    <string name="conn_un">Your connection is unavailable</string>
    <string name="member"> members</string>
    <string name="alone">You are alone!</string>
    <string name="invite_to">Invite to</string>
    <string name="sended"> sended</string>
    <string name="select_date_first">Select start date first</string>
    <string name="same_date">The date must be at least the same of the start date</string>
    <string name="least_ten">You must have at least 10 years</string>
    <string name="check">Check your connection</string>
    <string name="internet_not">Internet not available</string>

</resources>
