<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/group_icon"
            android:title="@string/nav_groups_title" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_36dp"
            android:title="@string/nav_info_title" />
        <item
            android:id="@+id/nav_invites"
            android:icon="@drawable/ic_email_black_36dp"
            android:title="Your invites" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_36dp"
            android:title="@string/nav_logout_title" />
    </group>

</menu>
