<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.luca.planit.EventInfoFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        app:srcCompat="@drawable/ic_bulb_256" />

    <TextView
        android:layout_marginTop="10sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/proposals_text"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5sp"
        android:background="@color/iron"
        android:theme="@style/HorizontalLine" />

    <RadioGroup
        android:id="@+id/proposal_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15sp">

        <RadioButton
            android:id="@+id/radio_place"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginEnd="45sp"
            android:text="@string/places_proposals_text"/>

        <RadioButton
            android:id="@+id/radio_date"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/dates_proposal_text"/>

        <RadioButton
            android:id="@+id/radio_time"
            android:layout_marginStart="45sp"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/times_proposal_text"/>

    </RadioGroup>

    <ListView
        android:id="@+id/proposal_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="15sp"
        android:layout_weight="1"
        android:visibility="gone">

    </ListView>


</LinearLayout>
