<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView style="?android:textAppearanceMedium"
            android:padding="5sp"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_take_part_title"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/no_take_part_event_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_event_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_connection_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_connection_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/event_take_part_list_view"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>