<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luca.planit.PlanEventActivity">

    <TextView
        android:id="@+id/modify_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="35sp" />

    <ProgressBar
        android:id="@+id/signup_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/plan_event_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25sp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/place_settings_text"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp">

                <RadioButton
                    android:id="@+id/radio_place_not_defined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_choose_place_after" />

                <RadioButton
                    android:id="@+id/radio_place_defined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_choose_place_now" />

            </RadioGroup>


            <LinearLayout
                android:id="@+id/place_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20sp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/ic_place_black_36dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/place_name_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/place_name_edit"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/ic_place_black_36dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/place_province_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/place_province_edit"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/ic_place_black_36dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/place_city_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/place_city_edit"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/ic_place_black_36dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/place_address_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/place_address_edit"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30sp"
                android:background="@color/iron"
                android:theme="@style/HorizontalLine" />

            <TextView
                android:id="@+id/date_form_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/data_settings_text"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp">

                <RadioButton
                    android:id="@+id/radio_date_not_defined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_choose_date_after" />

                <RadioButton
                    android:id="@+id/radio_date_defined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_choose_date_now" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="2dp"
                        android:src="@drawable/ic_date_range_black_36dp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/date_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/date_edit"
                            android:inputType="date"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30sp"
                android:background="@color/iron"
                android:theme="@style/HorizontalLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/time_settings_text"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp">

                <RadioButton
                    android:id="@+id/radio_time_not_defined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_choose_time_after" />

                <RadioButton
                    android:id="@+id/radio_time_defined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_choose_time_now" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/time_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5sp"
                        android:layout_marginTop="10sp"
                        android:src="@drawable/ic_watch_later_black_36dp" />


                    <NumberPicker
                        android:id="@+id/hour_np"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50sp"
                        android:descendantFocusability="blocksDescendants" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10sp"
                        android:text="@string/time_minutes_separator"
                        android:textSize="20sp" />

                    <NumberPicker
                        android:id="@+id/minutes_np"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:descendantFocusability="blocksDescendants" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/apply_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/signup_button"
        android:text="@string/apply_button"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
