<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="7sp"
    android:paddingBottom="7sp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:text="@string/list_place_item_name" />

            <TextView
                android:id="@+id/place_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:text="@string/list_place_item_province" />

            <TextView
                android:id="@+id/place_province_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:text="@string/list_place_item_city" />

            <TextView
                android:id="@+id/place_city_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:text="@string/list_place_item_address" />

            <TextView
                android:id="@+id/place_address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/number_proposal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:gravity="center_vertical"
        android:padding="15sp"
        android:background="@drawable/number_suggestion_background"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white" />


</LinearLayout>